--- a/compiler/bootstrap/ecere/Makefile
+++ b/compiler/bootstrap/ecere/Makefile
@@ -214,8 +214,8 @@ clean: objdir
 	$(call rmq,$(TARGET))
 	$(call rmq,$(OBJECTS))
 
-realclean: clean
+realclean: objdir
 	$(call rmrq,$(OBJ))
 
-distclean:
+distclean: objdir
 	$(call rmrq,obj/)
